# flet-audio

./: .docstr.yaml  .gitignore  404.html  CHANGELOG.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
audio/: index.html
changelog/: index.html
docs/: audio.md  index.md
docs/types/: audio_duration_change_event.md  audio_position_change_event.md  audio_state.md  audio_state_change_event.md  release_mode.md
examples/audio_example/: pyproject.toml
examples/audio_example/src/: example_1.py  main.py
license/: index.html
search/: search_index.json
src/flet_audio/: audio.py  types.py
src/flutter/flet_audio/: pubspec.yaml
src/flutter/flet_audio/lib/src/: audio.dart  extension.dart
tests/: basic_test.py  pyproject.toml
types/audio_duration_change_event/: index.html
types/audio_position_change_event/: index.html
types/audio_state/: index.html
types/audio_state_change_event/: index.html
types/release_mode/: index.html
