[project]
name = "flet-audio-example"
version = "1.0.0"
description = "flet-audio-example"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "flet-audio >=0.2.0.dev0",
  "flet >=0.70.0.dev0",
]

# Docs: https://flet.dev/docs/publish
[tool.flet]
org = "com.mycompany"
product = "flet-audio-example"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"
